# report-size-deltas

./: .flake8  .gitignore  .prettierignore  Dockerfile  README.md  Taskfile.yml  action.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check-markdown-task.yml  check-npm-task.yml  check-poetry-task.yml  check-prettier-formatting-task.yml  check-python-task.yml  check-toc-task.yml  libraries_report-size-deltas.yml  spell-check-task.yml  spell-check.yml  sync-labels-npm.yml  test-integration.yml  test-python-poetry-task.yml  upload-report-artifact.yml
.github/workflows/testdata/artifact-source/multi-report-artifact/: arduino-avr-leonardo.json  arduino-sam-arduino_due_x.json
.github/workflows/testdata/artifact-source/per-report-artifact/: arduino-samd-mkrzero.json
.github/workflows/testdata/local-source/single-folder/: arduino-avr-leonardo.json  arduino-sam-arduino_due_x.json  arduino-samd-mkrzero.json
.github/workflows/testdata/sketches-reports/: arduino-avr-leonardo.json  arduino-sam-arduino_due_x.json  arduino-samd-mkrzero.json
docs/: FAQ.md
reportsizedeltas/: reportsizedeltas.py
reportsizedeltas/tests/: requirements.txt  test_reportsizedeltas.py
reportsizedeltas/tests/data/test_delete_previous_comment/: comments.json
reportsizedeltas/tests/data/test_get_artifacts/multiple-artifacts/sketches-reports-arduino-avr-leonardo/: arduino-avr-leonardo.json
reportsizedeltas/tests/data/test_get_sketches_reports/new-report-format/: golden-sketches-reports.json
(+3 files in other folders)
