[tool.poetry]
name = "arduino/report-size-deltas"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.dev.dependencies]
codespell = "2.2.5"
coverage = "7.3.3"
flake8 = "6.1.0"
pep8-naming = "0.13.3"
pytest = "7.4.3"
pytest-mock = "3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
