[tool.black]
line-length = 120

[tool.poetry]
name = "arduino/report-size-deltas"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
codespell = "2.2.5"
coverage = "7.3.3"
flake8 = "6.1.0"
pep8-naming = "0.13.3"
pytest = "7.4.3"
pytest-mock = "3.12.0"
mypy = "1.7.1"

# The dependencies in this group are installed using pipx; NOT Poetry. The use of a `poetry` section is a hack required
# in order to be able to manage updates of these dependencies via Dependabot, as used for all other dependencies.
[tool.poetry.group.pipx]
optional = true

[tool.poetry.group.pipx.dependencies]
poetry = "2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
